--- a/pipelines/create/Jenkinsfile
+++ b/pipelines/create/Jenkinsfile
@@ -18,24 +18,29 @@ pipeline {
             name: "ENV_NAME",
             description: "Unique name for the environment you want to create. It'll be used to create unique resources and could be used as part of DNS entries."
         )
-        text(
-            name: "ENV_OWNER",
-            description: "Name and email of the person deploying the environment. Must follow format 'Name Surname - email@dns.com'"
-        )
-        text(
-            name: "ENV_TEAM",
-            description: "Name of the team in charge of the resource"
-        )
-        text(
-            name: "FILE_NAME",
-            defaultValue: "test-file.txt",
-            description: "Name of the temporal file which will be created in the instance."
+        string(
+            name: "PARAMETER_STORE_NAMESPACE",
+            description: "Base SSM parameter store namespace where configurations are stored."
         )
     }
+    environment {
+        AWS_ACCESS_KEY_ID = credentials('jenkins-access-key-id')
+        AWS_SECRET_ACCESS_KEY = credentials('jenkins-secret-key')
+        AWS_DEFAULT_REGION = 'us-west-2'
+    }
     stages {
-        stage('Create terraform vars') {
+        stage('Validate extra params') {
+            input {
+                message "Need some extra info"
+                ok "Send"
+                parameters {
+                    string(name: "OWNER", description: "Resource owner")
+                    string(name: "TEAM", description: "Resource team")
+                }
+            }
             steps {
-
+                echo "Owner: ${OWNER}"
+                echo "Team: ${TEAM}"
             }
         }
     }
