--- a/pipelines/create/Jenkinsfile
+++ b/pipelines/create/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
             choices: ['dev', 'uat'], 
             description: 'Choose environment'
         )
-        text(
+        string(
             name: "ENV_NAME",
             description: "Unique name for the environment you want to create. It'll be used to create unique resources and could be used as part of DNS entries."
         )
