--- a/pipelines/create/Jenkinsfile
+++ b/pipelines/create/Jenkinsfile
@@ -42,6 +42,8 @@ pipeline {
             steps {
                 sh "pipelines/create/create_tfvars.sh > ${ENV_NAME}.tfvars"
                 sh "pipelines/create/create_ansible_yaml.sh > ${ENV_NAME}.yaml"
+                sh "cat ${ENV_NAME}.tfvars"
+                sh "cat ${ENV_NAME}.yaml"
             }
         }
         stage('Store environment configuration') {
