--- a/pipelines/update/Jenkinsfile
+++ b/pipelines/update/Jenkinsfile
@@ -79,16 +79,18 @@ aws ssm get-parameter --name \"${PARAMETER_STORE_NAMESPACE}/${ENVIRONMENT}/${ENV
             }
         }
         stage('Wait until instance is up') {
-            INSTANCE_ID = sh(script: 'terraform output instance_id', returnStdout: true).trim()
-            timeout(time: 10, unit: 'MINUTES') {
-                waitUntil {
-                    try {
-                        return sh(
-                            script: "aws ec2 describe-instance-status --instace-ids ${INSTANCE_ID} | jq \".InstanceStatuses[0].InstanceStatus.Status\" -r", 
-                            returnStdout: true
-                        ).trim() == 'ok'
-                    } catch (exception) {
-                        return false
+            steps {
+                INSTANCE_ID = sh(script: 'terraform output instance_id', returnStdout: true).trim()
+                timeout(time: 10, unit: 'MINUTES') {
+                    waitUntil {
+                        try {
+                            return sh(
+                                script: "aws ec2 describe-instance-status --instace-ids ${INSTANCE_ID} | jq \".InstanceStatuses[0].InstanceStatus.Status\" -r", 
+                                returnStdout: true
+                            ).trim() == 'ok'
+                        } catch (exception) {
+                            return false
+                        }
                     }
                 }
             }
