Try to fix create pipeline bool paramenter

--- a/pipelines/create/Jenkinsfile
+++ b/pipelines/create/Jenkinsfile
@@ -65,10 +65,10 @@ pipeline {
         stage('Invoke update pipeline') {
             steps {
                 build job: 'Update environment', parameters: [
-                    string(name: 'ENVIRONMENT', value: "${ENVIRONMENT}"),
-                    string(name: 'ENV_NAME', value: "${ENV_NAME}"),
-                    string(name: 'PARAMETER_STORE_NAMESPACE', value: "${PARAMETER_STORE_NAMESPACE}"),
-                    string(name: 'WAIT_APPROVAL', value: "false")
+                    [$class: 'StringParameterValue', name: 'ENVIRONMENT', value: ENVIRONMENT],
+                    [$class: 'StringParameterValue', name: 'ENV_NAME', value: ENV_NAME],
+                    [$class: 'StringParameterValue', name: 'PARAMETER_STORE_NAMESPACE', value: PARAMETER_STORE_NAMESPACE],
+                    [$class: 'BooleanParameterValue', name: 'WAIT_APPROVAL', value: false]
                 ]
             }
         }
