--- a/pipelines/update/Jenkinsfile
+++ b/pipelines/update/Jenkinsfile
@@ -83,7 +83,7 @@ aws ssm get-parameter --name \"${PARAMETER_STORE_NAMESPACE}/${ENVIRONMENT}/${ENV
                 script {
                     instance_id = sh(script: 'terraform output instance_id', returnStdout: true).trim()
                     timeout(time: 10, unit: 'MINUTES') {
-                        waitUntil {
+                        waitUntil(initialRecurrencePeriod: 5000, quiet: true) {
                             try {
                                 return sh(
                                     script: "aws ec2 describe-instance-status --instance-ids ${instance_id} | jq \".InstanceStatuses[0].InstanceStatus.Status\" -r", 
