--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -23,8 +23,10 @@
       package:
         name: nano
         state: present
+      become: true
 
     - name: Install docker
       package:
         name: docker
         state: present
+      become: true
