--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -25,8 +25,12 @@
         state: present
       become: true
 
-    - name: Install docker
+    - name: Install fortune
       package:
-        name: docker
+        name: fortune-mod
         state: present
       become: true
+
+    - name: Get cookie
+      shell:
+        cmd: fortune
